objects/CountryScoreCard__c.object
<CustomObject>
    <description>Country Score Card</description>
    <fields>
        <fullName>Audit_Score_Card__c</fullName>
        <label>Audit Score Card</label>
        <referenceTo>Audit_Score_Card__c</referenceTo>
        <relationshipLabel>CountryScoreCards</relationshipLabel>
        <relationshipName>CountryScoreCards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>CountryScoreCards</relationshipLabel>
        <relationshipName>CountryScoreCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>Audit_Score_Card__r.Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrdGrp10__c</fullName>
        <description>Product Group 10 Count</description>
        <inlineHelpText>Product Group 10 Count</inlineHelpText>
        <label>PrdGrp10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrdGrp1__c</fullName>
        <description>Product Group 1 Count</description>
        <inlineHelpText>Product Group 1 Count</inlineHelpText>
        <label>PrdGrp1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrdGrp2__c</fullName>
        <description>Product Group 2 Count</description>
        <inlineHelpText>Product Group 2 Count</inlineHelpText>
        <label>PrdGrp2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_10__c</fullName>
        <description>Product Group 10</description>
        <inlineHelpText>Product Group 10</inlineHelpText>
        <label>Product Group 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <description>Product Group 1</description>
        <inlineHelpText>Product Group 1</inlineHelpText>
        <label>Product Group 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2__c</fullName>
        <description>Product Group 2</description>
        <inlineHelpText>Product Group 2</inlineHelpText>
        <label>Product Group 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>PrdGrp1__c +  PrdGrp2__c +  PrdGrp3__c +  PrdGrp4__c +  PrdGrp5__c +  PrdGrp6__c +  PrdGrp7__c +  PrdGrp8__c +  PrdGrp9__c +  PrdGrp10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CountryScoreCard</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CountryScoreCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CountryScoreCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>